feat: counter for current tab

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "background": {
-    "script": ["background.js"]
+    "scripts": ["dist/background.js"]
   },
   "description": "__MSG_app_description__",
   "default_locale": "en",
