feat: change background and color on click

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "default_locale": "en",
   "permissions": [
     "<all_urls>",
-    "notifications"
+    "activeTab"
   ],
   "content_scripts": [
     {
