--- a/manifest.json
+++ b/manifest.json
@@ -22,11 +22,13 @@
     }
   ],
   "icons": {
+    "32": "icons/32.png",
     "64": "icons/64.png",
     "256": "icons/256.png"
   },
   "browser_action": {
     "default_icon": {
+      "32": "icons/32.png",
       "64": "icons/64.png",
       "256": "icons/256.png"
     }
