--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,11 @@
 {
   "name": "Coronavirus detector",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
   "background": {
-    "scripts": ["dist/background.js"]
+    "scripts": [
+      "dist/background.js"
+    ]
   },
   "description": "__MSG_app_description__",
   "default_locale": "en",
@@ -22,11 +24,13 @@
     }
   ],
   "icons": {
+    "32": "icons/32.png",
     "64": "icons/64.png",
     "256": "icons/256.png"
   },
   "browser_action": {
     "default_icon": {
+      "32": "icons/32.png",
       "64": "icons/64.png",
       "256": "icons/256.png"
     }
