--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,9 @@
   "version": "0.0.2",
   "manifest_version": 2,
   "background": {
-    "scripts": ["dist/background.js"]
+    "scripts": [
+      "dist/background.js"
+    ]
   },
   "description": "__MSG_app_description__",
   "default_locale": "en",
